--- a/paper/main/library.bib
+++ b/paper/main/library.bib
@@ -947,3 +947,15 @@
   pages={75--92},
   year={2017}
 }
+
+@article{Raupach_npjCAS_2023,
+   author = {Raupach, Timothy H. and Soderholm, Joshua S. and Warren, Robert A. and Sherwood, Steven C.},
+   title = {Changes in hail hazard across Australia: 1979-2021},
+   journal = npjCAS,
+   volume = {6},
+   number = {1},
+   pages = {143},
+   ISSN = {2397-3722},
+   DOI = {10.1038/s41612-023-00454-8},
+   year = {2023}
+}
